<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/padding_horizontal"
    android:paddingRight="@dimen/padding_horizontal"
    android:paddingTop="@dimen/padding_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".33">

            <RelativeLayout
                android:id="@+id/card_preview_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/card_gradient" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/hide_cvc"
                        android:layout_width="0dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="3dp"
                        android:layout_weight=".47"
                        android:background="@drawable/slash_slash_gradiet" />

                    <TextView
                        android:id="@+id/card_preview_cvc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:layout_weight=".1"
                        android:hint="@string/ccv_card"
                        android:text="@string/ccv_card"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/card_preview_front"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/card_gradient" />

                <TextView
                    android:id="@+id/card_preview_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="35dp"
                    android:hint="@string/name_card"
                    android:textAllCaps="true"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <TextView
                    android:id="@+id/card_preview_expiry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="35dp"
                    android:hint="@string/expiry_date_card"
                    android:textAllCaps="true"
                    android:textColor="#fff"
                    android:textColorHint="#fff" />

                <TextView
                    android:id="@+id/card_preview_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="35dp"
                    android:layout_marginTop="10dp"
                    android:textAllCaps="true"
                    android:textColor="#fff"
                    android:textColorHint="#fff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/card_preview_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:gravity="top|center_horizontal"
                    android:hint="@string/default_card"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".7">

            <LinearLayout
                android:id="@+id/payment_amount_layout"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:gravity="bottom"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/payment_amount_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/text_color"
                    android:textSize="17sp" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/cardNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="15dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp">

                <EditText
                    android:id="@+id/card_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_card"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/cardNumberLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardNameLayout"
                android:layout_marginTop="15dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp">

                <EditText
                    android:id="@+id/card_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/number_card"
                    android:inputType="phone"
                    android:lines="1"
                    android:maxLength="19"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/expiry_date_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cardNumberLayout"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/expiryDateLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp">

                    <EditText
                        android:id="@+id/expiry_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/expiry_date_card"
                        android:inputType="phone"
                        android:lines="1"
                        android:maxLength="5"
                        android:maxLines="1" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v4.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".05" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/cvcLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".45"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp">

                    <EditText
                        android:id="@+id/cvc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ccv_card"
                        android:inputType="phone"
                        android:lines="1"
                        android:maxLength="3"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/expiry_date_layout"
                android:layout_marginTop="15dp"
                android:background="@drawable/background_pay_btn"
                android:padding="5dp"
                android:text="@string/save_card"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/payment_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="sans-serif"
                android:textColor="@color/text_color"
                android:textSize="25sp"
                android:visibility="gone" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>